--- a/style.css
+++ b/style.css
@@ -33,11 +33,43 @@ html, body {
 }
 
 #banner {
-  background: url('assets/wave.png') no-repeat;
+  background: url('assets/wave.png') no-repeat center bottom;
+  background-size: cover;
 }
 
 #main-header {
   font-weight: bold;
+}
+
+#sub-header {
+  font-size: 14px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+#features-header {
+  padding-top: 135px;
+  padding-bottom: 115px;
+}
+
+#features {
+  padding-bottom: 140px;
+}
+
+#graphics-container {
+  width: 400px;
+}
+
+#phone {
+  width: 200px;
+  height: auto;
+  padding-top: 85px; 
+  padding-bottom: 85px;
+  opacity: 0;
+  animation: fadein ease-in 1;
+  animation-fill-mode: forwards;
+  animation-duration: .5s;  
+  animation-delay: .5s;
 }
 
 #divider {
@@ -46,7 +78,19 @@ html, body {
 }
 
 #footer {
-  padding-bottom: 30px;
+  padding-top: 70px;
+}
+
+#footer-padding {
+  padding-top: 60px;
+  padding-bottom: 50px;
+  overflow: hidden;
+}
+
+#copyright {
+  color: #565b87;
+  text-align: right;
+  font-size: 12px;
 }
 
 .bg-custom-blue {
@@ -57,72 +101,228 @@ html, body {
   background-color: #353854;
 }
 
-.jumbotron {
-  background-color: transparent;
-  color: white;
-}
-
 .bubble {
   opacity: 0;
   animation: fadein ease-in 1;
   animation-fill-mode: forwards;
-  animation-duration: 1s;
+  animation-duration: .5s;
   text-align:center;
   position: absolute;
 }
   
 .orange.bubble {
-  width:50px;
-  height:50px;
-  border-radius:25px;
-  font-size:10px;    
+  top: 49%;
+  left: 5%;
+  width: 60px;
+  height: 60px;
+  border-radius: 30px;
+  font-size: 12px;    
   color: white;
-  line-height:50px;
+  line-height: 60px;
   background-color: #fc6a42;
-  z-index: 1;
-  animation-delay: 1s;
-}
-  
-.blue.bubble {
-  width:5vw;
-  height:5vw;
-  border-radius:2.5vw;
-  font-size:1vw;    
-  color: white;
-  line-height:5vw;
-  background-color: #4466c9;
-  right: 1.5vw;
-  top: 19.5vw;
   z-index: 1;
   animation-delay: 1.5s;
 }
   
-.white.bubble {
-  width:3vw;
-  height:3vw;
-  border-radius:1.5vw;
-  font-size:1vw;    
-  color: #6ca3ff;
-  line-height:3vw;
-  background-color: white;
-  right: 4.9vw;
-  top: 10.5vw;
+.blue.bubble {
+  top: 46%;
+  right: 5%;
+  width: 60px;
+  height: 60px;
+  border-radius: 30px;
+  font-size: 10px;    
+  color: white;
+  line-height: 60px;
+  background-color: #4466c9;
   z-index: 1;
   animation-delay: 2s;
 }
   
-.yellow.bubble {
-  width:2.8vw;
-  height:2.8vw;
-  border-radius:1.4vw;
-  font-size:.9vw;    
-  color: #9db0c5;
-  line-height:2.8vw;
-  background-color: #fcec64;
-  right: 4.3vw;
-  top: 36vw;
+.white.bubble {
+  top: 25%;
+  right: 12%;
+  width: 38px;
+  height: 38px;
+  border-radius: 19px;
+  font-size: 12px;  
+  color: #6ca3ff;
+  line-height: 38px;
+  background-color: whitesmoke;
   z-index: 1;
   animation-delay: 2.5s;
+}
+  
+.yellow.bubble {
+  top: 83%;
+  right: 10%;
+  width:36px;
+  height:36px;
+  border-radius:17px;
+  font-size:12px;
+  font-weight: bold;
+  color: #9db0c5;
+  line-height:36px;
+  background-color: #fcec64;
+  z-index: 1;
+  animation-delay: 3s;
+}
+
+#scroll-button {
+  position: relative;
+  bottom:20px;
+  width:50px;
+  height:50px;
+  border-radius:25px;  
+  color: orange;
+  line-height:50px;
+  text-align:center;
+  background: white;
+  margin: auto;
+  z-index: 1;
+  cursor: pointer;
+}
+
+#scroll-button:hover {
+  transform: translateY(-5px);
+}
+
+#scroll-button:active {
+	background-color: lavender;
+}
+
+#scroll-button-up { /*some redundancies with #scroll-button because using modifying selector causes JQuery bugs, see comment on script*/
+  position: relative;
+  bottom:-70px;
+  width:50px;
+  height:60px;
+  border-radius:25px;  
+  color: #afafc3;
+  line-height: 50px;
+  text-align:center;
+  background: #434769;
+  margin: auto;
+  left: 40%;
+  z-index: 1;
+  cursor: pointer;
+  border-radius: 3px;
+}
+
+#scroll-button-up:hover {
+  transform: translateY(-5px);
+}
+
+@media (min-width: 576px) { 
+  #main-header {
+    font-size: 50px;
+  }
+}
+
+@media (min-width: 768px) {
+  #main-header {
+    font-size: 60px;
+  }
+  #sub-header {
+    font-size: 16px;
+    padding-top: 25px;
+    padding-bottom: 25px;
+  }
+  #features {
+    padding-bottom: 340px;
+  }
+  .container-fluid {
+    width: 768px; /* fixed site widths starting from 768px and on (bootstrap medium ~ 'md') */
+  }
+}
+
+@media (min-width: 992px) {
+  #phone {
+    width: 230px; /* 15% increase from base size, bubbles sized proportionally larger */
+    height: auto;
+  }
+  #main-header {
+    font-size: 70px;
+  }
+  .orange.bubble {
+    width: 69px;
+    height: 69px;
+    border-radius: 34.5px;
+    font-size: 13.8px; 
+    line-height: 69px;
+  }
+  .blue.bubble {
+    width: 69px;
+    height: 69px;
+    border-radius: 34.5px;
+    font-size: 11.5px;    
+    line-height: 69px;
+  }
+  .white.bubble {
+    width: 43.7px;
+    height: 43.7px;
+    border-radius: 21.85px;
+    font-size: 13.8px;  
+    line-height: 43.7px;
+  }
+  .yellow.bubble {
+    width:41.4px;
+    height:41.4px;
+    border-radius:19.55px;
+    font-size:13.8px;
+    line-height:41.4px;
+  }
+  .container-fluid {
+    width: 992px; /* fixed site width 992px (bootstrap large ~ 'lg') */
+  }
+}
+
+@media (min-width: 1200px) {
+  #phone {
+    width: 260px; /* 30% increase from base size, bubbles sized proportionally larger */
+    height: auto;
+  }
+  #main-header {
+    font-size: 80px;
+  }
+  #sub-header {
+    font-size: 18px;
+  }
+  .orange.bubble {
+    width: 78px;
+    height: 78px;
+    border-radius: 39px;
+    font-size: 15.6px;    
+    line-height: 78px;
+  }
+  .blue.bubble {
+    width: 78px;
+    height: 78px;
+    border-radius: 39px;
+    font-size: 13px;    
+    line-height: 78px;
+  }
+  .white.bubble {
+    width: 49.4px;
+    height: 49.4px;
+    border-radius: 24.7px;
+    font-size: 15.6px;  
+    line-height: 49.4px;
+  }
+  .yellow.bubble {
+    width:46.8px;
+    height:46.8px;
+    border-radius:23.4px;
+    font-size:15.6px;
+    line-height:46.8px;
+  }
+  .container-fluid {
+    width: 1200px; /* fixed site width 1200px (bootstrap extra large ~ 'xl') */
+  }
+}
+
+@media (min-width: 1600px) {
+  .container-fluid { /* max site width 1600px */
+    width: 1600px;
+  }
 }
   
 @keyframes fadein {
