--- a/style.css
+++ b/style.css
@@ -171,10 +171,10 @@ html, body {
   width: 50px;
   height: 50px;
   border-radius: 25px;  
-  color: orange;
+  color: #ff5e62;
   line-height: 50px;
   text-align: center;
-  background: white;
+  background: whitesmoke;
   margin: auto;
   cursor: pointer;
 }
