--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ html, body {
   color: #bfbfbf;
 }
 
-.custom-grey-content {
+.custom-grey-2 {
   color: #aeaeae;
 }
 
@@ -62,8 +62,20 @@ html, body {
   padding-bottom: 115px;
 }
 
+.feature-name {
+  font-size: 24px;
+}
+
+.feature-content {
+  line-height: 2;
+}
+
 #features {
   padding-bottom: 140px;
+}
+
+#footer {
+  padding-top: 70px;
 }
 
 #divider {
@@ -71,9 +83,6 @@ html, body {
   border-color: #434769;
 }
 
-#footer {
-  padding-top: 70px;
-}
 
 #footer-padding {
   padding-top: 60px;
@@ -107,7 +116,7 @@ html, body {
   animation: fadein ease-in 1;
   animation-fill-mode: forwards;
   animation-duration: .5s;
-  text-align:center;
+  text-align: center;
   position: absolute;
   z-index: 1;
 }
@@ -147,7 +156,7 @@ html, body {
   font-size: 12px;  
   color: #6ca3ff;
   line-height: 38px;
-  background-color: whitesmoke;
+  background-color: white;
   animation-delay: 2.5s;
 }
   
@@ -174,8 +183,9 @@ html, body {
   color: #ff5e62;
   line-height: 50px;
   text-align: center;
-  background: whitesmoke;
+  background-color: white;
   margin: auto;
+  z-index: 1;
   cursor: pointer;
 }
 
@@ -189,19 +199,18 @@ html, body {
 
 #scroll-button-up { /*some redundancies with #scroll-button because using modifying selector causes JQuery bugs, see comment in index.html under 'JQuery'*/
   position: relative;
-  bottom:-70px;
-  width:50px;
-  height:60px;
-  border-radius:25px;  
+  bottom: -70px;
+  width: 50px;
+  height: 60px;
+  border-radius: 3px;  
   color: #afafc3;
   line-height: 50px;
-  text-align:center;
-  background: #434769;
+  text-align: center;
+  background-color: #434769;
   margin: auto;
-  left: 40%;
   z-index: 1;
   cursor: pointer;
-  border-radius: 3px;
+  left: 40%;
 }
 
 #scroll-button-up:hover {
@@ -262,11 +271,11 @@ html, body {
     line-height: 43.7px;
   }
   .yellow.bubble {
-    width:41.4px;
-    height:41.4px;
-    border-radius:19.55px;
-    font-size:13.8px;
-    line-height:41.4px;
+    width: 41.4px;
+    height: 41.4px;
+    border-radius: 19.55px;
+    font-size: 13.8px;
+    line-height: 41.4px;
   }
   .container-fluid {
     width: 992px; /* fixed site width 992px (bootstrap large ~ 'lg') */
@@ -306,11 +315,11 @@ html, body {
     line-height: 49.4px;
   }
   .yellow.bubble {
-    width:46.8px;
-    height:46.8px;
-    border-radius:23.4px;
-    font-size:15.6px;
-    line-height:46.8px;
+    width: 46.8px;
+    height: 46.8px;
+    border-radius: 23.4px;
+    font-size: 15.6px;
+    line-height: 46.8px;
   }
   .container-fluid {
     width: 1200px; /* fixed site width 1200px (bootstrap extra large ~ 'xl') */
